修复收到消息展示多条消息（包含之前的信息）

--- a/app.json
+++ b/app.json
@@ -8,5 +8,6 @@
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTextStyle": "black"
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
